# opencode-config

./: .editorconfig  .gitignore  .prettierignore  .shellcheckrc  AGENTS.md  CONTRIBUTING.md  README.md  build.sh  build.yaml  bunfig.toml  install.sh  opencode.json  opencode.json.tui-migration.bak  package.json  pyproject.toml  setup.sh  versions.txt
.githooks/: pre-push
.github/workflows/: docker.yml  lint.yml  release.yml
agents/: auto-auditor.md  auto-implementor.md  designer.md  implementor.md  planner.md  project-manager.md  read-only.md  read-write.md  reviewer.md  triage.md
docker/: .dockerignore  Dockerfile  aoe-config.toml  entrypoint.sh
images/: README.md
profiles/: host.env
prompts/: audit.md  build.md  plan.md
sandbox/: .gitattributes  .gitignore  .prettierignore
scripts/: build.py  build.ts  install.py  install.ts  lint.sh  lint.ts  pyproject.toml  setup.py  setup.ts  test.ts  vault-sync.sh
skills/archive/: SKILL.md
skills/fleet-schemas/: SKILL.md
skills/gh-helpers/: SKILL.md  create-issue.sh  create-pr.sh
skills/lib/: frontmatter.sh
skills/local-ci/: SKILL.md  act.sh
skills/repo-notes/: SKILL.md
skills/reviews/: SKILL.md
skills/schemas/: SKILL.md
skills/vault/: SKILL.md
skills/vault-cache/: SKILL.md  refresh.sh
skills/vault-gc/: SKILL.md  gc.sh
skills/vault-init/: SKILL.md  init.sh
skills/vault-lint/: SKILL.md  baseline-commands.txt  lint.sh
skills/vault-triage/: README.md  SKILL.md  notify.sh  setup.sh  toast-handler.sh  triage-dashboard.sh  triage-resolve.sh
src/: aoe-config.toml  aoe-profile.toml  build.yaml  opencode.json
src/agents/: auditor.md  auto-auditor.md  auto-implementor.md  designer.md  implementor.md  investigate.md  planner.md  project-manager.md  reviewer.md
src/images/: README.md
src/permissions/: sandbox.yaml
src/profiles/: docker.env  gh.aoe.toml  gh.env  host.env  profiles.toml.example
src/prompts/: audit.md  build.md  plan.md
src/tools/: _lib.ts  _vault.ts  create_issue.ts  create_pr.ts  delegate.ts  delegate_fleet.ts  fm.ts  fm_read.ts  fm_write.ts  github_comment.ts  impl_complete.ts  impl_startup.ts  local_ci.ts  notify.ts  notify_triage.ts  session_notify.ts  triage.ts  triage_dashboard.ts  triage_write.ts  vault.ts  vault_cache.ts  vault_find.ts  vault_gc.ts  vault_init.ts  vault_lint.ts  vault_mv.ts  vault_write.ts  wt.ts  wt_cleanup.ts  wt_detect.ts  wt_owner_repo.ts  wt_switch_branch.ts
src/vault/: AGENTS.md  (+1 more)
(+135 files in other folders)
