[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-config"
version = "0.1.0"
description = "Standalone installer for ada-x64/opencode-config"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ada-x64" }]

[project.scripts]
opencode-config = "scripts.setup:main"

[tool.hatch.build.targets.wheel]
include = ["scripts/setup.py"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = [
  "E501", # line too long — formatter handles this
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["scripts"]
ignore = ["**/__pycache__"]

# yaml stubs aren't available in stdlib — suppress the missing source warning
reportMissingModuleSource = "none"

# yaml.safe_load returns Any by nature; these flow from it and can't be avoided
# without adding a full type stub or wrapper — not worth it for a build script
reportAny = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
